<resources>
    <string name="appName">MEDtracker</string>
    <string name="btnNewSub">Button</string>
    <string name="goBack">Terug</string>
    <string name="addNewSubstance">Add a New Substance</string>
    <string name="searchSubstance">Alcohol..</string>
    <string name="searchbarText">Zoeken naar een substantie</string>
    <string name="suggestion1">Alcohol...</string>
    <string name="suggestion2">iets1</string>
    <string name="suggestion3">iets2</string>
    <string name="suggestion4">iets3</string>
    <string name="suggestion5">iets4</string>
    <string name="suggestion6">iets4</string>
    <string name="calender">Calender</string>
    <string name="substances">Substances</string>
    <string name="settings">Settings</string>
    <string name="toevoegen">Toevoegen</string>
    <string name="todo">TODO</string>
    <string name="previewImage">preview_image</string>
    <string name="blikBier">Blik - 33cl</string>
    <string name="alcoholPercentage">Alcohol percentage 5%</string>
    <string name="substanceName">Substance name</string>
    <string name="empty">It is pretty empty in here…</string>
    <string name="readMore">Read more</string>
    <string name="title">Title</string>
    <string name="message">This is an empty message</string>
    <string name="readLess">Read less</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="hintUsername">Fill in your username</string>
    <string name="username">Username</string>
    <string name="hintEmail">Email</string>
    <string name="password">Enter your password</string>
    <string name="birthday">Enter your date of birth</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very strong</string>
    <string name="passwordRules">Your password must be at least 8 characters. With at least 1 number and 1 special character</string>
    <string name="welcomeSettings">Welcome to the settings</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date">Date of birth</string>
    <string name="passwordSetting">Password</string>
    <string name="logOut">Log out</string>
    <string name="log">Pressing this will log you out.</string>
    <string name="deleteAccount">Delete account</string>
    <string name="delete">Pressing this will delete your account</string>

</resources>
