<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/panel"
    android:layout_marginBottom="10dp"
   android:layout_marginStart="16dp"
   android:layout_marginEnd="16dp">

    <TextView
        android:id="@+id/Substance_name"
        android:textColor="@color/TextColor"
        android:layout_width="276dp"
        android:layout_height="46dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/substanceName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Liters"
        android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="60dp"
        android:text="@string/blikBier" />

    <TextView
        android:id="@+id/Percantage"
        android:layout_width="wrap_content"
        android:textColor="@color/TextColor"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="80dp"
        android:text="@string/alcoholPercentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_editor_absoluteY="92dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/Preview_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/previewImage"
        android:src="@drawable/arrow_back" />

</RelativeLayout>