<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FragmentBackground"
    android:id="@+id/registerLay">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLay"
        style="@style/editTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hintUsername"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            style="@style/editText"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLay"
        style="@style/editTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/usernameLay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hintEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/editText"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLay"
        style="@style/editTextLayout"
        app:layout_constraintTop_toBottomOf="@id/emailLay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/TextColor"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/editText"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/password_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_strength_weak"
        android:textColor="@color/TextColorFade"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLay"
        app:layout_constraintBottom_toTopOf="@id/progressBar"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBar"
        android:indeterminate="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="20dip"
        android:maxWidth="20dip"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="@+id/passwordLay"
        app:layout_constraintStart_toStartOf="@+id/passwordLay"
        app:layout_constraintTop_toBottomOf="@id/password_strength" />

    <TextView
        android:id="@+id/login_instructions"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/passwordRules"
        android:textColor="@color/TextColorFade"
        app:layout_constraintEnd_toEndOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintTop_toBottomOf="@id/progressBar"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateLay"
        style="@style/editTextLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordLay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/birthday">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datePicker"
            android:focusableInTouchMode="false"
            android:inputType=""
            style="@style/editText" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="75dp"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/FragmentBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>